feat: add logic programming

--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
     <button id="sorteioBtn">Sortear nome</button>
     <p id="resultado"></p>
 </div>
-<!--<script>-->
-<!--    var nomes = []-->
+<script>
+    var nomes = []
 
-<!--    document.getElementById('adicionarBtn').onclick = function () {-->
-<!--        var nomeInput = document.getElementById('nomeInput')-->
-<!--        if (nomeInput.value) {-->
-<!--            nomes.push(nomeInput.value)-->
-<!--            nomeInput.value = ""-->
-<!--        } else {-->
-<!--            alert("Por favor, digite um nome válido")-->
-<!--        }-->
-<!--    }-->
-<!--    document.getElementById('sorteioBtn').onclick = function () {-->
-<!--        if (nomes.length > 0) {-->
-<!--            var nomeSorteado = nomes[Math.floor(Math.random() * nomes.length)]-->
-<!--            document.getElementById('resultado').textContent = nomeSorteado-->
-<!--        } else {-->
-<!--            alert("Por favor, adicione alguns nomes primeiro!")-->
-<!--        }-->
-<!--    }-->
-<!--</script>-->
+    document.getElementById('adicionarBtn').onclick = function () {
+        var nomeInput = document.getElementById('nomeInput')
+        if (nomeInput.value) {
+            nomes.push(nomeInput.value)
+            nomeInput.value = ""
+        } else {
+            alert("Por favor, digite um nome válido")
+        }
+    }
+    document.getElementById('sorteioBtn').onclick = function () {
+        if (nomes.length > 0) {
+            var nomeSorteado = nomes[Math.floor(Math.random() * nomes.length)]
+            document.getElementById('resultado').textContent = nomeSorteado
+        } else {
+            alert("Por favor, adicione alguns nomes primeiro!")
+        }
+    }
+</script>
 </body>
 </html>
