feat: add logic programming

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p id="resultado"></p>
 </div>
 <script>
-    var nomes = []
+    var nomes = [];
 
     document.getElementById('adicionarBtn').onclick = function () {
         var nomeInput = document.getElementById('nomeInput')
